[package]
name = "many-after8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive", "env"] }
rand = "0.8.5"
serde = "1.0.194"
serde_json = "1.0.111"
